--- a/assets/style.css
+++ b/assets/style.css
@@ -532,6 +532,7 @@ ul ol {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 1%;
+	padding-bottom: 5%;
 }
 
 @media only screen and (max-width: 1140px) {
@@ -1003,7 +1004,6 @@ ul ol {
 	content: ' ';
 	background-color: #1C6474;
 	position: absolute;
-	width: 100%;
 	height: 30%;
 	bottom: 0;
 	left: 0;
